# vexcalibur-action

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  CONTRIBUTING.md  README.md  SECURITY.md  action-compatibility.json  action.yml  mise.toml  renovate.json  requirements-build-constraints.txt  requirements-dev.in  requirements-dev.txt  requirements-fuzz.in  requirements-fuzz.txt  requirements-release.in  requirements-release.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  fuzz.yml  release.yml  scorecard.yml
docs/how-to/: fuzz-action-wrapper.md  generate-csaf-from-sbom.md  generate-openvex-from-sbom.md  generate-vex-from-sbom.md  release-action.md
docs/reference/: action.md  compatibility.md
scripts/: action_contract.py  check-action-contract.py  install-asdf-plugins.sh  next-release-tag.sh  refresh-requirements.sh  release.py  release_common.py  release_metadata.py  release_policy.py  release_state.py  release_tags.py  run-atheris.sh  run-vexcalibur.sh
tests/: __init__.py  helpers.py  release_test_support.py  test_action_compatibility.py  test_action_contract.py  test_documentation.py  test_fake_osv_server.py  test_fuzz_security.py  test_github_release.py  test_next_release_tag.py  test_release_policy.py  test_release_security.py  test_release_state.py  test_release_tags.py  test_run_vexcalibur.py
tests/fixtures/: fake_osv_server.py
tests/fixtures/fake-vexcalibur/: pyproject.toml
tests/fixtures/fake-vexcalibur/src/fake_vexcalibur/: __init__.py
tests/fuzz/: __init__.py  (+4 more)
(+15 files in other folders)
