[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-vexcalibur"
version = "0.0.0"
requires-python = ">=3.10"

[project.scripts]
vexcalibur = "fake_vexcalibur:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
